# leaf

./: Cargo.toml  README.md  build.rs
benches/: network_benches.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: benchmarks.rs
src/: cerealization_protocol.rs  layer.rs  lib.rs  typedefs.rs  utilities.rs  weight.rs
src/layers/: core.rs  mod.rs
src/layers/activation/: core.rs  relu.rs  sigmoid.rs  tanh.rs
src/layers/common/: convolution.rs  linear.rs  log_softmax.rs  pooling.rs  softmax.rs
src/layers/container/: mod.rs  sequential.rs
src/layers/loss/: mod.rs  negative_log_likelihood.rs
src/layers/utility/: flatten.rs  reshape.rs
src/solver/: confusion_matrix.rs  mod.rs
src/solvers/: mod.rs
src/solvers/core/: confusion_matrix.rs  mod.rs
src/solvers/sgd/: mod.rs  momentum.rs
tests/: _layer_specs.rs  _solver_specs.rs  layers.rs
