[package]
name = "leaf"
description = "Machine Learning Framework for Hackers"
version = "0.3.0"
authors = [
  "Maximilian Goisser <max@autumnai.com>",
  "Michael Hirn <mj@autumnai.com>",
  # author of hard-fork:
  "Jony <jonysy@users.noreply.github.com>"
]
repository = "https://github.com/autumnai/leaf"
homepage = "https://github.com/autumnai/leaf"
documentation = "http://autumnai.github.io/leaf"
readme = "README.md"
keywords = ["deep-learning", "neural-networks", "machine-learning", "framework"]
license = "MIT OR Apache-2.0"

build = "build.rs"

[dependencies]
capnp = "0.8.17"
clippy = { version = "0.0.212", optional = true }
log = "0.4.3"
num = "0.2.0"
rand = "0.5.5"
timeit = "0.1.2"

[dependencies.parenchyma]
path = "../parenchyma"
[dependencies.parenchyma-blas]
path = "../parenchyma/crates/parenchyma-blas"
[dependencies.parenchyma-deep]
path = "../parenchyma/crates/parenchyma-deep"
[dependencies.parenchyma-ml]
path = "../parenchyma/crates/parenchyma-ml"

[build-dependencies]
capnpc = "0.6.1"

[dev-dependencies]
env_logger = "0.3"

[features]
dev = []
unstable = [] # for travis-cargo
lint = ["clippy"]

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
